--- a/FO/VUES/fo_connexion.html
+++ b/FO/VUES/fo_connexion.html
@@ -1,16 +1,15 @@
 <div id="formulaire">
-	<form id="frmConnexion" action="?page=verifCnx" method="POST" onsubmit="return validate();">
+	<form id="frmConnexion" action="?page=verifCnx" method="POST">
 		<fieldset>
 			<table align="center">
 				<tr>
-					<td><input  class="default-input name" type="text" id="txt_login" name="txt_login"  placeholder="Login"/></td>
+					<td><input class="default-input name" type="text" id="txt_login" name="txt_login" placeholder="Login"/></td>
 				</tr>
 				<tr>
-				
-					<td><input class="default-input website" type="password" id="pwd_mdp" name="pwd_mdp"  placeholder="Mot de passe"/></td>
+					<td><input class="default-input website" type="password" id="pwd_mdp" name="pwd_mdp" placeholder="Mot de passe"/></td>
 				</tr>
 				<tr>
-					<td><input type="submit" id="connexion"name"connexion"  value="Connexion"/></td>
+					<td><input type="submit" id="connexion"name"connexion" value="Connexion"/></td>
 				</tr>
 			</table>
 		</fieldset>
