--- a/FO/VUES/fo_connexion.html
+++ b/FO/VUES/fo_connexion.html
@@ -3,15 +3,16 @@
 		<fieldset>
 			<table align="center">
 				<tr>
-					<td><input class="default-input name" type="text" id="txt_login" name="txt_login" placeholder="Login"/></td>
+					<td><input class="required" required type="text" id="txt_login" name="txt_login" placeholder="Login"/></td>
 				</tr>
 				<tr>
-					<td><input class="default-input website" type="password" id="pwd_mdp" name="pwd_mdp" placeholder="Mot de passe"/></td>
+					<td><input class="required" type="password" id="pwd_mdp" name="pwd_mdp" placeholder="Mot de passe"/></td>
 				</tr>
 				<tr>
 					<td><input type="submit" id="connexion"name"connexion" value="Connexion"/></td>
 				</tr>
 			</table>
+
 		</fieldset>
 	</form>	
 </div>
