--- a/mdl/fct_js.html
+++ b/mdl/fct_js.html
@@ -12,3 +12,7 @@
 <script type="text/javascript" src="js/jquery.tweet.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/fonctionsAjax.js"></script>	
+<script type="text/javascript" src="js/test/additional-methods.js"></script>	
+<script type="text/javascript" src="js/test/jquery.validate.js"></script>
+<script type="text/javascript" src="js/valideFormConnexion.js"></script>
+<script type="text/javascript" src="js/test/messages_fr.js"></script>
