--- a/mdl/fct_js.html
+++ b/mdl/fct_js.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyBurMIbLiO3XOdziJ1fkD-sP_KXtF_r_uk"></script>
+<!--<script type="text/javascript" src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyBurMIbLiO3XOdziJ1fkD-sP_KXtF_r_uk"></script>-->
 <script type="text/javascript" src="js/jquery.gmap-1.1.0-min.js"></script>
 <script type="text/javascript" src="js/jquery.themepunch.plugins.min.js"></script>
 <script type="text/javascript" src="js/jquery.themepunch.revolution.min.js"></script>
