--- a/test/intervention/footer.html
+++ b/test/intervention/footer.html
@@ -6,3 +6,4 @@
 <a href="showentreprise.php">Entreprise / Admin </a></br>
 <a href="ajoututilisateur.php">Ajout/Utilisateur / Admin </a></br>
 <a href="ajoutentreprise.php">AJout/Entreprise / Admin </a></br>
+<a href="ajoutrole.php">AJout/Role / Admin </a></br>
