--- a/test/intervention/footer.html
+++ b/test/intervention/footer.html
@@ -1,3 +1,6 @@
+<hr>
+<table border="4"> 
+<tr><td>
 <a href="ajoutincident.php">Ajout Incident</a></br>
 <a href="ajoutintervention.php">Ajout Intervention</a></br>
 <a href="showinterventionMesResponCli.php">Mes Incidents / Responsable Client </a></br>
@@ -6,4 +9,5 @@
 <a href="showentreprise.php">Entreprise / Admin </a></br>
 <a href="ajoututilisateur.php">Ajout/Utilisateur / Admin </a></br>
 <a href="ajoutentreprise.php">AJout/Entreprise / Admin </a></br>
-<a href="ajoutrole.php">AJout/Role / Admin </a></br>
+<a href="ajoutrole.php">AJout/Role / Admin </a></br></td></tr>
+</table>
