--- a/test/intervention/INC/footer.html
+++ b/test/intervention/INC/footer.html
@@ -7,9 +7,9 @@
 <a href="?page=showinterventionMesResponCli">Mes Incidents / Responsable Client </a></br>
 <a href="?page=showinterventionIntervenant">Interventions / Intervenant </a></br>
 <a href="?page=showutilisateur">Utilisateur / Admin </a></br>
-<a href="showentreprise.php">Entreprise / Admin </a></br>
+<a href="?page=showentreprise">Entreprise / Admin </a></br>
 <a href="?page=ajoututilisateur">Ajout/Utilisateur / Admin </a></br>
-<a href="ajoutentreprise.php">AJout/Entreprise / Admin </a></br>
-<a href="ajoutrole.php">AJout/Role / Admin </a></br>
+<a href="?page=ajoutentreprise">AJout/Entreprise / Admin </a></br>
+<a href="?page=ajoutrole">AJout/Role / Admin </a></br>
 <a href="?page=deconnexion">Deconnexion</a></br></td></tr>
 </table>
