--- a/test/intervention/INC/footer.html
+++ b/test/intervention/INC/footer.html
@@ -11,5 +11,6 @@
 <a href="?page=ajoututilisateur">Ajout/Utilisateur / Admin </a></br>
 <a href="?page=ajoutentreprise">AJout/Entreprise / Admin </a></br>
 <a href="?page=ajoutrole">AJout/Role / Admin </a></br>
-<a href="?page=deconnexion">Deconnexion</a></br></td></tr>
+
+<a href="INC/deconnecter.inc.php">Deconnexion</a></br></td></tr>
 </table>
