--- a/test/intervention/a.html
+++ b/test/intervention/a.html
@@ -1,11 +1,10 @@
-﻿<?php ?>
-<script>function checkForm(pseudo, mdp) {
+﻿<script>function checkForm(pseudo, mdp) {
 	var xhr = new XMLHttpRequest();
 	xhr.onreadystatechange = function () {
 	if (xhr.readyState == 4 && (xhr.status == 200 || xhr.status == 0)) {
 			if (xhr.responseText == 'OK') {
 				alert('Connexion réussie !');
-				window.location.replace('../index.php'); // Mettez ici les instructions lorsque la connexion est faite
+				window.location.replace('index.php'); // Mettez ici les instructions lorsque la connexion est faite
 				}
 				else {
 				alert('Mot de passe ou pseudo incorrect'); // Et ici le message d'erreur que vous souhaitez
