Revert 073d6fd..96790ee
This rolls back to commit 073d6fd64e9293bc397b8772ee8cd62599c7d719.

--- a/test/intervention/a.html
+++ b/test/intervention/a.html
@@ -15,8 +15,7 @@
 	mdp = encodeURIComponent(mdp);
 	xhr.open("GET", "INC/checkPSW.php?pseudo=" + pseudo + "&mdp=" + mdp, true);
 	xhr.send(null);
-	}
-</script>
+	}</script>
 <form method="#" onSubmit="checkForm(document.getElementById('p').value, document.getElementById('m').value);" action="#">
 <input type="text" id="a" placeholder="pseudo" />
 <input type="password" id="m" placeholder="****" />
