--- a/Pages/connexion.html
+++ b/Pages/connexion.html
@@ -13,7 +13,7 @@
 		};
 	pseudo = encodeURIComponent(pseudo);
 	mdp = encodeURIComponent(mdp);
-	xhr.open("GET", "../INC/checkPSW.php?pseudo=" + pseudo + "&mdp=" + mdp, true);
+	xhr.open("GET", "checkPSW.php?pseudo=" + pseudo + "&mdp=" + mdp, true);
 	xhr.send(null);
 	}</script>
 <form method="#" id="test" onSubmit="checkForm(document.getElementById('p').value, document.getElementById('m').value);" action="#">
